# haiku

./: .cvsignore  .editorconfig  .gitignore  .gitreview  AGENTS.md  Jamfile  Jamrules  LICENSE  License.md  ReadMe  ReadMe.Compiling  ReadMe.Compiling.md  ReadMe.IntroductionToHaiku  ReadMe.cross-compile  ReadMe.md  configure  file.txt  lgtm.yml  makehaikufloppy  makehdimage  out1.txt  out2.txt  sout1.txt  sout2.txt
src/libs/ncurses/test/: Makefile  Makefile.in  README  aclocal.m4  background.c  blue.c  bs.c  cardfile.c  color_set.c  configure  configure.in  demo_defkey.c  demo_forms.c  demo_keyok.c  demo_menus.c  demo_panels.c  demo_termcap.c  ditto.c  dots.c  edit_field.c  edit_field.h  filter.c  firework.c  firstlast.c  gdc.6  gdc.c  hanoi.c  hashtest.c  ins_wide.c  inserts.c  keynames.c  knight.c  listused.sh  lrtest.c  modules  ncurses.c  newdemo.c  railroad.c  rain.c  test.priv.h  (+5 more)
src/libs/pdflib/: Jamfile  Makefile  PDFlib.dsw  configure  configure.in  pdflib-config.in
src/libs/pdflib/bind/: Makefile
src/libs/pdflib/bind/pdflib/: Makefile
src/libs/pdflib/config/: aclocal.m4  ltmain.sh  mkbind.inc.in  mkcommon.inc.in  mklibs.inc.in  mkmainlib.inc  mkprogs.inc.in  mksubdirs.inc.in
src/libs/pdflib/doc/: PDFlib-license.rtf
src/libs/pdflib/doc/pdflib/: changes.txt  changes4.txt  compatibility.txt  readme-binary.txt  readme-source-as400.txt  readme-source-mac.txt  readme-source-unix.txt  readme-source-windows.txt  readme.txt
src/libs/pdflib/fonts/: pdflib.upr  print_glyphs.ps
src/libs/pdflib/libs/: Jamfile  Makefile  PDFlib.mcp
src/libs/pdflib/libs/flate/: Jamfile  Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  flate.dsp  infblock.c  infblock.h  infcodes.c  infcodes.h  inffast.c  inffast.h  inffixed.h  inflate.c  inftrees.c  inftrees.h  infutil.c  infutil.h  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
src/libs/pdflib/libs/pdcore/: Jamfile  Makefile  pc_arc4.c  pc_arc4.h  pc_chartabs.h  pc_config.h  pc_core.c  pc_core.h  pc_corefont.c  pc_corefont.h  pc_coremetr.h  pc_crypt.c  pc_crypt.h  pc_ebcdic.c  pc_ebcdic.h  pc_encoding.c  pc_encoding.h  pc_file.c  pc_file.h  pc_font.c  pc_font.h  pc_generr.h  pc_geom.c  pc_geom.h  pc_md5.c  pc_md5.h  pc_nocarbon.h  pc_optparse.c  pc_optparse.h  pc_output.c  pc_output.h  pc_sbuf.c  pc_sbuf.h  pc_scope.c  pc_scope.h  pc_unicode.c  pc_unicode.h  pc_util.c  pc_util.h  pdcore.dsp
src/libs/pdflib/libs/pdflib/: Jamfile  Makefile  PDFlib.bpf  PDFlib.bpr  PDFlib_dll.bpf  PDFlib_dll.bpr  PDFlib_dll.res  p_afm.c  p_annots.c  p_basic.c  p_block.c  p_bmp.c  p_ccitt.c  p_cid.c  p_cid.h  p_color.c  p_color.h  p_draw.c  p_encoding.c  p_filter.c  p_font.c  p_font.h  p_generr.h  p_gif.c  p_gstate.c  p_hkscmyk.h  p_hkslab.h  p_hostfont.c  p_hyper.c  p_icc.c  p_icc.h  p_icc9809.h  p_icclib.c  p_icclib.h  p_image.c  p_image.h  p_intern.h  p_jpeg.c  p_kerning.c  p_keyconn.h  (+26 more)
src/libs/pdflib/libs/png/: Jamfile  Makefile  png.c  png.dsp  png.h  pngasmrd.h  pngconf.h  pngerror.c  pngget.c  pngmem.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngvcrd.c
src/libs/pdflib/libs/tiff/: Jamfile  Makefile  port.h  t4.h  tif_auxx.c  tif_close.c  tif_codec.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dumpmode.c  tif_error.c  tif_fax3.c  tif_fax3.h  tif_fax3sm.c  tif_getimage.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_open.c  tif_packbits.c  tif_predict.c  tif_predict.h  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_unix.c  tif_version.c  tif_warning.c  tif_zip.c  tiff.dsp  tiff.h  tiffconf.h  tiffio.h  tiffiop.h  tiffvers.h  (+1 more)
src/libs/pdflib/progs/: Makefile
src/libs/pdflib/progs/pdflib/: Makefile  getopt.c  pdfimage.c  pdfimpose.c  text2pdf.c
src/libs/print/libgutenprint/: AUTHORS  ChangeLog  INSTALL  Jamfile  Makefile.am  Makefile.in  NEWS  README  README.package  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac
src/libs/print/libgutenprint/doc/: FAQ.html  Makefile.am  Makefile.in  README.maintaining  gutenprint-users-manual.odt  gutenprint.dox.in  gutenprintui2.dox.in
src/libs/print/libgutenprint/include/: Makefile.am  Makefile.in
src/libs/print/libgutenprint/m4/: gettext.m4  gimp.m4  libtool.m4  stp.m4  stp_cups.m4  stp_gimp.m4  stp_option.m4  stp_release.m4
src/libs/print/libgutenprint/m4extra/: libtool.m4  stp_release.m4.in
src/libs/print/libgutenprint/man/: Makefile.am  Makefile.in  cups-calibrate.8.in  cups-genppd.8.in  cups-genppdupdate.8.in  escputil.1.in  ijsgutenprint.1.in
src/libs/print/libgutenprint/po/: ChangeLog  Makevars  POTFILES.in  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  gutenprint.pot  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  nb.gmo  nb.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  ru.gmo  ru.po  sk.gmo  sk.po  sl.gmo  sl.po  (+4 more)
src/libs/print/libgutenprint/samples/: Makefile.am  Makefile.in
src/libs/print/libgutenprint/scripts/: Makefile.am  Makefile.in  autogen.sh  global.mk  mkchlog
src/libs/print/libgutenprint/src/: Jamfile  Makefile.am  Makefile.in
src/libs/print/libgutenprint/test/: Makefile.am  Makefile.in  bjc-unprint.c  curve.c  cyan-sweep.tif  escp2-weavetest.c  parse-escp2  pcl-unprint.c  pixma_parse.c  pixma_parse.h  run-testdither  run-weavetest  testdither.c  unprint.c  xml-curve.c
src/tools/docbook/libxslt/: ChangeLog  FEATURES  INSTALL  Jamfile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.h.in  configure  configure.in  libxslt.spec  libxslt.spec.in
src/tools/docbook/libxslt/doc/: API.html  APIchunk0.html  APIchunk1.html  APIchunk2.html  APIchunk3.html  APIchunk4.html  APIchunk5.html  APIchunk6.html  APIchunk7.html  APIchunk8.html  APIchunk9.html  APIconstructors.html  APIfiles.html  APIfunctions.html  APIsymbols.html  FAQ.html  Makefile.am  Makefile.in  apibuild.py  bugs.html  contribs.html  docbook.html  docs.html  downloads.html  extensions.html  help.html  index.html  internals.html  intro.html  libxslt-api.xml  libxslt-refs.xml  libxslt.xsa  newapi.xsl  (+8 more)
(+45820 files in other folders)
